--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATA_BASE_URL=jdbc:mysql://localhost:3306/db_location
-DATA_BASE_USER=root
-DATA_BASE_PASSWORD=root
+DATABASE_URL=jdbc:mysql://localhost:3306/movies
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=root
